cmake_minimum_required(VERSION 3.26)
project(Learn_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Learn_C__
        "Part 1 - The Basics/Getting Started/Hello.cpp"
        "Part 1 - The Basics/Getting Started/Exercise1.cpp"
        "Part 1 - The Basics/The Anatomy of a C++ Program/DemoConsleOutput.cpp"
        "Part 1 - The Basics/The Anatomy of a C++ Program/InputDemo.cpp"
)
